examples/cgi-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lfs-cgi
  namespace: lizardfs
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
      - cgi.example.com
    secretName: lfs-cgi-tls-acme

  rules:
  - host: cgi.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lfs-cgi
              port:
                number: 9425
